image and video overplay fixed

--- a/netflix-clone/src/components/Header/header.css
+++ b/netflix-clone/src/components/Header/header.css
@@ -41,3 +41,15 @@
     cursor: pointer;
     /* background-color: lightgreen; */
 }
+
+@media (max-width: 768px) {
+
+}
+
+@media (max-width: 480px) {
+
+    .header_outer_container {
+        display: none;
+    }
+
+}
