--- a/netflix-clone/src/components/Footer/footer.css
+++ b/netflix-clone/src/components/Footer/footer.css
@@ -35,8 +35,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* border:#fff 1px solid; */
-    width:10%;
+    border:#fff 1px solid;
+    width:25%;
     margin:10px 0;
     cursor: pointer;
 }
@@ -45,11 +45,25 @@
     margin-bottom:10px;
 }
 
-@media screen and (max-width: 600px){
 
-    .footer_data {
-        display: flex;
-        flex-direction: column;
-
-    }
+@media (max-width: 768px) {
+  .footer_inner_container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer_icons, .footer_data, .service_code, .copy-write {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .footer_data {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer_data div {
+    margin-bottom: 20px;
+  }
+  .footer_data ul {
+    padding: 0;
+  }
 }
+
